# hive-re

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
assets/: metadata.json
assets/primitives/: box.json  cylinder.json  sphere.json
docs/: CODEX_EXECUTION_ROADMAP.md  CONTROLLER_API.md  PLATFORM_GAP_MATRIX.md  PRIMITIVE_GEOMETRY_CONTRACT.md  PRODUCT_PLAN.md  THIRD_PARTY_NOTICES.md  gap.md
docs/iterations/: 2026-07-09-mvp-scaffold.md  2026-07-09-product-plan.md  2026-07-09-requirements-smoke-fix.md  2026-07-09-scene-editing-reliability.md  2026-07-09-simulation-state-bridge.md  2026-07-09-threejs-viewport.md  2026-07-09-venv-requirements.md  2026-07-09-viewport-editing-tools.md  2026-07-10-openusd-asset-import.md  2026-07-10-physics-validation-preflight.md  2026-07-10-platform-audit-roadmap.md  2026-07-10-primitive-physics-playground.md  2026-07-10-typescript-editor-migration.md  2026-07-10-visual-physics-fidelity.md  2026-07-14-codex-usd-articulation-roadmap.md  2026-07-15-articulation-mjcf-export.md  2026-07-15-controller-safety.md  2026-07-15-external-robot-gate.md  2026-07-15-fixed-physics-clock.md  2026-07-15-joint-control-ui.md  2026-07-15-joint-position-command.md  2026-07-15-live-joint-jog.md  2026-07-15-openusd-articulation-mapping.md  2026-07-15-openusd-robot-project-import.md  2026-07-15-openusd-stage-loader.md  2026-07-15-robot-control-soak.md  (+58 more)
frontend-tests/: store.mjs  trajectory-draft.mjs
tests/: test_asset_metadata.py  test_contact_sensors.py  test_controller_loader.py  test_controller_runtime.py  test_editor_bridge.py  test_imu_sensors.py  test_joint_pd_controller.py  test_joint_state_recording.py  test_joint_state_sensors.py  test_mjcf_exporter.py  test_mujoco_contact_adapter.py  test_openusd_articulation_importer.py  test_openusd_importer.py  test_openusd_robot_asset_importer.py  test_openusd_stage_loader.py  test_physics_materials.py  test_physics_validation.py  test_primitive_geometry.py  test_project_service.py  test_qt_robot_ui.py  test_qt_sensor_ui.py  test_robot_arm_soak.py  test_robot_arm_workflow.py  test_robotics_model.py  test_scene_history.py  test_scene_model.py  test_scene_trajectory_library.py  test_sensor_noise.py  test_shared_schemas.py  test_simulation_clock.py  test_simulation_session.py  test_trajectory.py  test_visual_physics_fidelity.py  test_web_viewport_assets.py
(+80 files in other folders)
