[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simlab"
version = "0.1.0"
description = "Simulation-first desktop robotics scene editor MVP."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "SimLab Contributors" }]
dependencies = [
  "PySide6>=6.7",
  "mujoco>=3.1",
  "usd-core>=25.5",
  "jsonschema>=4.23",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
simlab = "simlab.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/simlab/schemas" = ["shared/schemas/*.json"]

[tool.setuptools.package-data]
simlab = [
  "web_viewport/*.html",
  "web_viewport/*.css",
  "web_viewport/generated/*.js",
  "web_viewport/ts/*.ts",
  "web_viewport/ts/*.d.ts",
  "web_viewport/vendor/*.js",
  "web_viewport/vendor/*.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
packages = ["simlab"]
ignore_missing_imports = true
check_untyped_defs = true
